# tensorxx

./: .gitmodules  CMakeLists.txt  Makefile  README.md  canny_pipeline.py  main.py  pyproject.toml  tensor_example.py
bindings/: module.cpp
src/tensorxx/: __init__.py  opencv_utils.py
