[build-system]
requires = ["scikit-build-core", "pybind11", "cmake", "ninja"] # isolated environment
build-backend = "scikit_build_core.build"

[project]
name = "tensorx-python" # distributive name for PyPI
version = "0.0.4"
description = "Python bindings for the Tensor-library"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name="Alar Akilbekov", email="alar.akilbekov@gmail.com" }]
license = "MPL-2.0"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-python"
]

[project.urls]
Homepage = "https://github.com/alarxx/tensorx-python"
Issues = "https://github.com/alarxx/tensorx-python/issues"

[tool.scikit-build]
wheel.packages = ["src/tensorx"]


# OpenCV

[tool.cibuildwheel]
# чистим любые "левые" .so перед сборкой внутри контейнера
before-build = """
set -eux
rm -rf Tensor-library/opencv/build || true
find . -name "*.so" -delete || true
"""

[tool.cibuildwheel.linux]
# Собираем OpenCV внутри manylinux контейнера и ставим в /opt/opencv
before-all = """
set -eux

yum -y install git cmake ninja-build make \
  zlib-devel libjpeg-turbo-devel libpng-devel libtiff-devel

rm -rf /tmp/opencv-src /tmp/opencv-build /opt/opencv
git clone --depth 1 --branch 4.x https://github.com/opencv/opencv.git /tmp/opencv-src

cmake -S /tmp/opencv-src -B /tmp/opencv-build -G Ninja \
  -DCMAKE_BUILD_TYPE=Release \
  -DCMAKE_INSTALL_PREFIX=/opt/opencv \
  -DBUILD_SHARED_LIBS=ON \
  -DBUILD_TESTS=OFF -DBUILD_PERF_TESTS=OFF -DBUILD_EXAMPLES=OFF -DBUILD_DOCS=OFF \
  -DBUILD_opencv_python3=OFF \
  -DBUILD_LIST=core,imgproc,imgcodecs,highgui \
  -DWITH_QT=OFF -DWITH_GTK=OFF \
  -DWITH_FFMPEG=OFF -DWITH_GSTREAMER=OFF \
  -DWITH_TBB=OFF -DWITH_OPENCL=OFF -DWITH_IPP=OFF

cmake --build /tmp/opencv-build
cmake --install /tmp/opencv-build

find /opt/opencv -name OpenCVConfig.cmake -maxdepth 8
"""

[tool.cibuildwheel.environment]
# чтобы find_package(OpenCV CONFIG REQUIRED) нашёл OpenCVConfig.cmake
CMAKE_PREFIX_PATH = "/opt/opencv"
SKBUILD_CMAKE_ARGS = "-DCMAKE_PREFIX_PATH=/opt/opencv"
